gwt update